# LLM-Neurosurgery

./: README.md  main.py  pyproject.toml
docs/: github_colab_guide.md
notebooks/: 00_cloud_lab_setup.ipynb  01_pytorch_hf_basics.ipynb  01_pytorch_huggingface_basics.ipynb  02_transformer_anatomy.ipynb  02_transformer_architecture.ipynb  03_finetuning_lora.ipynb  04_representation_engineering.ipynb  05_qwen_architecture.ipynb
src/: add_image_tokenizer_01.py  add_local_cache_01.py  add_qwen_chat_00.py  add_setup_to_01.py  enhance_image_tokenize.py  extract_nb_images.py  fast_install_00.py  fix_01_vars.py  fix_qwen_vlm.py  generate_01_notebook.py  generate_02_notebook.py  generate_03_notebook.py  generate_04_notebook.py  generate_05_notebook.py  sync_00_speed.py  update_00_cache_check_and_gen.py  update_00_timing_tokens.py
