[project]
name = "llm-neurosurgery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.6.1",
    "jupyter>=1.1.1",
    "peft>=0.18.1",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "trl>=0.29.0",
]
